# ai-hardware

./: .gitignore  README.md  pyproject.toml
bench/ai_hardware_bench/: __init__.py  bench.py  cli.py  data.py  importers.py  instruments.py  mcp_server.py  model.py  prompts.py  quality.py  regression.py  report.py  safety.py  session.py  topology.py  web.py
docs/: architecture.md  data-model.md  diagnostic-workflow.md  mcp-framework-research.md  roadmap.md
examples/boards/: usb_power_stage.yaml
examples/regressions/: usb_power_stage.json
examples/sessions/: usb_power_stage_session.json
firmware/esp32-fixture/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32-fixture/.cache/clangd/index/: app_main.c.E2C145FDC1047701.idx  cJSON.c.B93C846F1B98F37E.idx  cJSON.h.0EACA0A9DB9F05A3.idx  cJSON_Utils.c.16CD1C0835FDE6BF.idx  cJSON_Utils.h.D1FE387B55516C68.idx  esp_mcp_completion.c.059E227CD50B9D8B.idx  esp_mcp_completion.h.C8011D3D733D75B1.idx  esp_mcp_completion_priv.h.91B466DD01195BDD.idx  esp_mcp_data.c.44EBBC88C677C6E7.idx  esp_mcp_data.h.A7964B300F760C53.idx  esp_mcp_engine.c.2D61B646CE01DFC5.idx  esp_mcp_engine.h.24247AFB86BF1AF5.idx  esp_mcp_error.h.C26F7062FB8D8DF3.idx  esp_mcp_http_server.c.99429F2C40303830.idx  esp_mcp_item.h.9A69A06FAA39B846.idx  esp_mcp_mgr.c.592884EB810F071E.idx  (+16 more)
firmware/esp32-fixture/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
firmware/esp32-fixture/tools/: deploy.py  smoke_test.py
schemas/: board_context.schema.json  diagnostic_session.schema.json
tests/: test_bench.py
tools/: bench.py
